<resources>
    <string name="app_name">Desafio03</string>
    <string name="welcome">Welcome to the Marvel HQ\'s</string>
    <string name="email">Email</string>
    <string name="email_example">tairo@digitalhouse.com</string>
    <string name="password">Password</string>
    <string name="pwd_example">***************</string>
    <string name="remember">Remember</string>
    <string name="btn_log_in">LOG IN</string>
    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="name_example">DigitalHouse Brasil</string>
    <string name="btn_register">SAVE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>