<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/marvel_red"
        app:placeholderText="@string/email_example"
        app:placeholderTextColor="@color/black"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/marvel_red">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:background="@android:color/transparent"
            app:boxBackgroundColor="@android:color/transparent"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/marvel_red"
        app:placeholderText="@string/pwd_example"
        app:placeholderTextColor="@color/black"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/marvel_red">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@android:color/transparent"
            app:boxBackgroundColor="@android:color/transparent"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>
</merge>