<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="22dp"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:padding="25dp"
                android:orientation="vertical"
                android:gravity="center">
                <include layout="@layout/layout_email_pwd"/>
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/remember"
                    android:checked="true"
                    android:buttonTint="@color/marvel_red"
                    android:textColor="@color/black"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/btn_log_in"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:backgroundTint="@color/marvel_red"
                    app:cornerRadius="3dp"/>
                <TextView
                    android:id="@+id/tvCreateAccount"
                    android:paddingVertical="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:gravity="center"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="@color/grey_letter"
                    android:textSize="16dp"/>
            </LinearLayout>
        </LinearLayout>

</LinearLayout>