<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical">
        <Space
            android:layout_width="match_parent"
            android:layout_height="65dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:paddingHorizontal="25dp"
            android:paddingTop="25dp"
            android:orientation="vertical"
            android:gravity="center">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/marvel_red"
                app:placeholderText="@string/name_example"
                app:placeholderTextColor="@color/black"
                app:boxBackgroundMode="filled"
                app:boxStrokeColor="@color/marvel_red"
                android:layout_marginBottom="5dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:background="@android:color/transparent"
                    app:boxBackgroundColor="@android:color/transparent"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>
            <include layout="@layout/layout_email_pwd"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/btn_register"
                android:fontFamily="@font/roboto"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:backgroundTint="@color/marvel_red"
                app:cornerRadius="3dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>